# ScriptDB

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  SPEC.md  build.sh  pyproject.toml  release-github.sh
.github/workflows/: test.yml
src/: basedb.py
src/scriptdb/: __init__.py  _rowfactory.py  abstractdb.py  asynccachedb.py  asyncdb.py  basedb.py  cachedb.py  dbbuilder.py  sqlite_backend.py  synccachedb.py  syncdb.py
tests/: conftest.py  test_async_basedb.py  test_async_cachedb.py  test_basedb.py  test_cachedb.py  test_composite_pk.py  test_conversion.py  test_dbbuilder.py  test_old_sqlite_backend.py  test_sync_basedb.py  test_sync_cachedb.py  test_syncdb_without_aiosqlite.py
tests/old-sqlite/: README.md
